<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DashX Demo</string>
    <string name="demo_app">Demo App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="signInTitle">Sign in to your Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Log out</string>

    <string name="email_required_text">Email is required</string>
    <string name="password_required_text">Password is required</string>
    <string name="first_name_required_text">First Name is required</string>
    <string name="last_name_required_text">Last Name is required</string>
    <string name="valid_email_text">Please enter valid Email.</string>

    <string name="something_went_wrong">Something went wrong</string>

    <string name="loading">Loading…</string>

    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="more">More</string>
    <string name="billing">Billing</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="notificationPreferences">Notification Preferences</string>
    <string name="fetch_location">Fetch Location</string>
    <string name="update">Update</string>

    <string name="newPostNotification">When someone creates a post</string>
    <string name="newPostNotificationHint">This will send a notification when someone creates a post</string>
    <string name="newBookmarkNotification">When someone bookmarks a post</string>
    <string name="newBookmarkNotificationHint">This will send a notification when someone bookmarks a post</string>
    <string name="locationSetting">Location Settings</string>
    <string name="locationSettingHint">Allow this app to access this device\'s current location.</string>
    <string name="notificationsSetting">Notifications Settings</string>
    <string name="notificationsSettingHint">Allow Push Notifications</string>
    <string name="save">Save</string>

    <string name="posts">Posts</string>
    <string name="add_post">Add Post</string>
    <string name="create_post">Create a Post</string>
    <string name="text">Text</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="text_required">Text is required</string>
    <string name="no_bookmarks_found">No bookmarks found.</string>

    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="send_us_message">Send us a message</string>
    <string name="submit">Submit</string>
    <string name="go_back">Go Back</string>
    <string name="name_required">Name is required</string>
    <string name="feedback_required">Feedback is required</string>

    <string name="back_to_login">Back to Login</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="preferences_saved">Preferences saved</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="gallery_permission_denied">Gallery permission denied</string>
    <string name="select_image">Select image:</string>
    <string name="choose_file">Choose file</string>
    <string name="select_video">Select video:</string>

    <string name="get_coarse_location">Get Coarse location</string>
    <string name="get_fine_location">Get Fine location</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">"Longitude: "</string>

</resources>
