<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/locationSettingTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/locationSetting"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/locationSettingDescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/locationSettingHint"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationSettingTitle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/locationToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:thumb="@drawable/switch_thumb_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingTextView"
        app:switchMinWidth="54dp"
        app:track="@drawable/switch_track_selector"
        app:useMaterialThemeColors="false" />

    <View
        android:id="@+id/separator0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#D3D3D3"
        app:layout_constraintTop_toBottomOf="@id/locationSettingDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notificationsSettingTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/notificationsSetting"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notificationsSettingDescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/notificationsSettingHint"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationsSettingTitle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notificationToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:thumb="@drawable/switch_thumb_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator0"
        app:switchMinWidth="54dp"
        app:track="@drawable/switch_track_selector"
        app:useMaterialThemeColors="false" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notificationPreferencesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/notificationPreferences"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationsSettingDescription" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/newPostSettingTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/newPostNotification"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationPreferencesTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/newPostSettingDescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/newPostNotificationHint"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPostSettingTitle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/newPostToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:thumb="@drawable/switch_thumb_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationPreferencesTextView"
        app:switchMinWidth="54dp"
        app:track="@drawable/switch_track_selector"
        app:useMaterialThemeColors="false" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#D3D3D3"
        app:layout_constraintTop_toBottomOf="@id/newPostSettingDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bookmarksPostSettingTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/newBookmarkNotification"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bookmarksPostSettingDescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/newBookmarkNotificationHint"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookmarksPostSettingTitle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/bookmarkPostToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:thumb="@drawable/switch_thumb_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator1"
        app:switchMinWidth="54dp"
        app:track="@drawable/switch_track_selector"
        app:useMaterialThemeColors="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelButton"
        style="@style/OutlinedButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintTop_toBottomOf="@id/bookmarksPostSettingDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        style="@style/FilledButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookmarksPostSettingDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>
